Fixing the styles for the designer.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,6 @@
     <title>Octoblu - Internet of Everything!</title>
 
     <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
-    <link href="assets/stylesheets/custom.css" rel="stylesheet">
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/stylesheets/dist/styles.css" type="text/css"/>
     <link rel="stylesheet" href="/lib/fontawesome/css/font-awesome.css" type="text/css"/>
@@ -174,7 +173,7 @@
 <script src="/assets/design/red/ui/editor.js"></script>
 <script src="/assets/design/red/ui/library.js"></script>
 <script src="/assets/design/red/ui/notifications.js"></script>
-<script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+<!--<script src="/lib/bootstrap/dist/js/bootstrap.js"></script>-->
 <!-- End Designer Dependencies -->
 </body>
 </html>
