--- a/public/pages/design.html
+++ b/public/pages/design.html
@@ -1,4 +1,4 @@
-<div class="row" class="designer-container"/>
+<div class="row" class="designer-container">
     <link href="/assets/design/jquery/css/smoothness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" media="screen"/>
     <link rel="stylesheet" type="text/css" href="/assets/design/orion/built-editor.css"/>
     <link rel="stylesheet" href="/assets/design/style.css"/>
