fixed style issues with admin page (flatty)

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -147,8 +147,8 @@
                 <div class="panel-heading group-summary-panel-heading">
                     <h4>
                         <i class="fa fa-users"></i>
-                        <a ui-sref=".detail({ 'uuid' : resourcePermission.uuid })" class="bg-primary">{{resourcePermission.name}}</a>
-                        <a href class="pull-right bg-primary" tooltip="Delete {{resourcePermission.name}}"
+                        <a ui-sref=".detail({ 'uuid' : resourcePermission.uuid })">{{resourcePermission.name}}</a>
+                        <a href class="pull-right" tooltip="Delete {{resourcePermission.name}}"
                            tooltip-placement="top"
                            tooltip-popup-delay="5" ng-click="deleteResourcePermission(resourcePermission)">
                             <i class="fa fa-trash-o fa-lg"></i>
