--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -1,26 +1,37 @@
 <div class="row device-detail">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h2><i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
-            {{device.name}}
-         <div class="btn-toolbar pull-right">
-             <div class="btn-group">
-                 <a class="btn btn-primary btn-lg" ng-click="editDevice(device)">
-                     <i class="fa fa-edit fa-lg"></i>
-                     <span>Edit</span>
-                 </a>
-             </div>
-            <div class="btn-group">
-                <a class="btn btn-danger btn-lg" ng-click="deleteDevice(device)">
-                    <i class="fa fa-trash-o fa-lg"></i>
-                    <span>Delete</span>
-                </a>
+        <div class="row">
+           <div class="col-xs-6">
+                <h2>
+                    <i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
+                    {{device.name}}
+                </h2>
+                <h4 class="text-muted">
+                    {{device.uuid}}
+                    <button ng-click="showToken = !showToken" class="btn btn-xs btn-default" title="Show Token"><i class="fa fa-key"></i></button>
+                    <span ng-show="showToken" class="text-success" title="Device Token">{{device.token}}</span>
+                </h4>
             </div>
-         </div>
-        </h2>
-        <h4 class="text-muted">{{device.uuid}}</h4>
+
+            <div class="col-xs-6">
+                <h2 class="text-right">
+                    <a class="btn btn-primary btn-lg" ng-click="editDevice(device)">
+                        <i class="fa fa-edit fa-lg"></i>
+                        <span>Edit</span>
+                    </a>
+
+                    <a class="btn btn-danger btn-lg" ng-click="deleteDevice(device)">
+                        <i class="fa fa-trash-o fa-lg"></i>
+                        <span>Delete</span>
+                    </a>
+                </h2>
+            </div>
+        </div>
+
         <div>
             <message-grapher device="device.uuid"></message-grapher>
         </div>
+
         <section class="col-xs-12">
             <tabset ng-if="device.type === 'gateway'">
                 <tab heading="Subdevices">
