We now support Github

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -47,6 +47,9 @@
                 <br />
 
                 <div class="row text-center">
+                  <a class="btn btn-github" href="{{getLoginUrl('/auth/github')}}" target="_self">
+                    <span class="fa fa-github"> Github</span>
+                  </a>
                   <a class="btn btn-facebook" href="{{getLoginUrl('/auth/facebook')}}" target="_self">
                     <span class="fa fa-facebook"> Facebook</span>
                   </a>
