--- a/public/pages/design.html
+++ b/public/pages/design.html
@@ -15,6 +15,11 @@
                         <li class="dropdown-header">Import From</li>
                         <li><a id="btn-import" href><i class="fa fa-clipboard"></i> Clipboard</a></li>
                         <li class="divider"></li>
+                        <li class="dropdown-header">Export To</li>
+                        <li id="li-menu-export-clipboard">
+                            <a id="btn-export-clipboard" tabindex="-1" href><i class="fa fa-clipboard"></i> Clipboard</a>
+                        </li>
+                        <li class="divider"></li>
                         <li class="dropdown-header">Workspace</li>
                         <li><a id="btn-workspace-add" href><i class="fa fa-plus"></i> Add</a></li>
                         <li><a id="btn-workspace-edit" href><i class="fa fa-edit"></i> Rename</a></li>
