--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,7 @@
 <script src="angular/directives/nvd3-line-chart.js"></script>
 <script src="angular/directives/nvd3-pie-chart.js"></script>
 <script src="angular/directives/nvd3-line-with-focus-chart.js"></script>
+<script src="angular/directives/nvd3-scatter-chart.js"></script>
 <script src="lib/ng-table/ng-table.js"></script>
 <script src="angular/directives/popover.js"></script>
 <script src="angular/directives/toggle.js"></script>
