--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -12,153 +12,35 @@
 <accordion-group heading="Quick Hits - Last 30 days" >
     <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-2 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Average Messages Per Day</h3>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!topResults.avgMsgPerDay ? topResults.avgMsgPerDay : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default>{{topResults.avgMsgPerDay}}
-                            </div>
-                        </h1>
+	<div class="form-group col-md-2">
+                      <span class="input-group-btn">
+                          <button class="btn btn-default" type="button" ng-click='loadTop("now-15d/d")'>
+                              <span class="fa fa-refresh"> Update</span>
+                          </button>
+                      </span>
                     </div>
-                </div>
-            </div>
-        </div>
-	
-	<div class="col-sm-2 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Average Messages Per Hour</h3>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!topResults.avgMsgPerHour ? topResults.avgMsgPerHour : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default>{{topResults.avgMsgPerHour}}
-                            </div>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-<div class="col-sm-2 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Number of Channels</h3>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!topResults.distCountChannels ? topResults.distCountChannels : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default>{{topResults.distCountChannels}}
-                            </div>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-	<div class="col-sm-2 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Distinct Count of Devices</h3>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!devices ? devices.length : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default>{{topResults.distCountDevice}}
-                            </div>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-<div class="col-sm-2 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Distinct Devices sent from</h3>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!devices ? devices.length : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default>{{topResults.distCountFromDevice}}
-                            </div>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-<div class="col-sm-2 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Distinct Devices sent to</h3>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!devices ? devices.length : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default>{{topResults.distCountToDevice}}
-                            </div>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-        </div>
+	</div>
+	<div class="row" ng-repeat="trRow in topResults.rows">
+	<div class="col-lg-3 col-sm-4 col-xs-6  dashboard-panel" ng-repeat="panel in trRow">
+		<div class="panel-heading"><h3 class="panel-title">{{panel.title}}</h3></div>
+		<div class="panel panel-default"><div class="panel-body"><div ng-switch="!!panel.results ? panel.results : 0">
+		<h1><div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div><div ng-switch-default>{{panel.results}}</div></h1>
+		</div></div></div>
+	</div>
 	</div>
         <div class="row">
-		<div class="col-sm-4 dashboard-panel">
+		<div class="col-sm-4 dashboard-panel" ng-repeat="panel in topResults.pie_panels">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Top Event Codes</h3>
+                    <h3 class="panel-title">{{panel.title}}</h3>
                 </div>
                 <div class="panel panel-default">
                     <a href="">
                         <div class="panel-body">
-                            <div ng-switch="!!topResults.eventCodes ? 1 : 0">
+                            <div ng-switch="!!panel.results ? 1 : 0">
                                <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
                                 <div ng-switch-default>
-                                    <div nvd3-pie-chart  data="topResults.eventCodes" height="300">
+                                    <div nvd3-pie-chart  data="panel.results" height="300">
                                         </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-sm-4 dashboard-panel">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Top Devices Sending</h3>
-                </div>
-                <div class="panel panel-default">
-                    <a href="">
-                        <div class="panel-body">
-                            <div ng-switch="!!topResults.fromUuid ? 1 : 0">
-                               <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                                <div ng-switch-default>
-                                    <div nvd3-pie-chart  data="topResults.fromUuid" height="300">
-					</div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-sm-4 dashboard-panel">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Top Devices Receiving</h3>
-                </div>
-                <div class="panel panel-default">
-                    <a href="">
-                        <div class="panel-body">
-                            <div ng-switch="!!topResults.toUuid ? 1 : 0">
-                                <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                                <div ng-switch-default>
-                                    <div nvd3-pie-chart data="topResults.toUuid" height="300"></div>
                                 </div>
                             </div>
                         </div>
@@ -169,14 +51,6 @@
     </div>
     <!-- Endof Container Fluid-->
 </accordion-group>
-<!-- Maybe later
-<accordion-group heading="Time Ranges">
-    <div class="row">
-        <div class="col-md-10">
-            <h2>Count of EventCodes over time</h2>
-        </div>
-    </div>
-</accordion-group> -->
 <accordion-group heading="Freeform Search">
     <div class="container-fluid">
         <div class="row">
@@ -197,7 +71,7 @@
                     <div class="form-group col-md-2">
                       <span class="input-group-btn">
                           <button class="btn btn-default" type="button" ng-click="search()">
-                              <span class="glyphicon glyphicon-search"> Find</span>
+                              <span class="fa fa-search"> Find</span>
                           </button>
                       </span>
                     </div>
@@ -322,7 +196,7 @@
 			<div class="form-group col-md-2 text-center">
 				<span class="input-group-btn">
                                           <button class="btn btn-default" type="button" ng-click="loadExploreGraph()">
-                                      <span class="glyphicon glyphicon-search"> Find</span>
+                                      <span class="fa fa-search"> Find</span>
                                   </button>
                                       </span>
                             </div>
@@ -349,8 +223,26 @@
                     </div>
             </div>
         </div>
-
+        </div><!-- END OF GRAPH ROW -->
+       <div class="row">
+        <div class="col-sm-8 dashboard-panel">
+            <div class="panel-heading">
+                <h3 class="panel-title">Event Counts over Time</h3>
+            </div>
+            <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div ng-switch="!!leg ? 1 : 0">
+                            <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                            <div ng-switch-default>
+                                <div nvd3-scatter-chart show-legend="True" axis-x-label="Hour" axis-x-type="date" axis-x-format="%-m/%-d %-H:%-M"
+                                      data="leg.scatter" height="400" ></div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
         </div>
+        </div><!-- END OF GRAPH ROW -->
+
     </div>
 </accordion-group>
 </accordion>
