Updating the save resource permissions

--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -22,7 +22,7 @@
                         <i class="fa fa-stack-1x"
                            ng-class="{'fa-user':resource.type == 'user', 'fa-hdd-o': resource.type == 'device'}"></i>
                  </span>
-                        <span>{{resource.properties.name || resource.properties.displayName || resource.properties.email}}</span>
+                        <span>{{getDisplayName(resource)}}</span>
                         <a class="btn btn-danger pull-right"
                            ng-click="removeResourceFromGroup(sourcePermissionsGroup, resource)"><i
                                 class="fa fa-trash-o"></i></a>
@@ -42,8 +42,7 @@
                             <a href ng-click="addResourceToGroup(sourcePermissionsGroup, resource)">
                                 <i class="fa fa-fw"
                                    ng-class="{'fa-user':resource.type == 'user', 'fa-hdd-o': resource.type === 'device'}"></i>
-                                {{resource.properties.name || resource.properties.displayName ||
-                                resource.properties.email}}
+                                {{getDisplayName(resource)}}
                             </a>
                         </li>
                     </ul>
@@ -162,7 +161,7 @@
                         <i class="fa  fa-stack-1x"
                            ng-class="{'fa-user':resource.type == 'user', 'fa-hdd-o': resource.type == 'device'}"></i>
                  </span>
-                        <span>{{resource.properties.name || resource.properties.displayName || resource.properties.email }}</span>
+                        <span>{{getDisplayName(resource)}}</span>
                         <a class="btn btn-danger pull-right"
                            ng-click="removeResourceFromGroup(targetPermissionsGroup, resource)">
                             <i class="fa fa-trash-o"></i></a>
@@ -182,9 +181,7 @@
                             <a href ng-click="addResourceToGroup(targetPermissionsGroup, resource)">
                                 <i class="fa fa-fw"
                                    ng-class="{'fa-user':resource.type == 'user', 'fa-hdd-o': resource.type == 'device'}"></i>
-                                {{resource.properties.name || resource.properties.displayName ||
-                                resource.properties.email
-                                }}
+                                {{getDisplayName(resource)}}
                             </a>
                         </li>
                     </ul>
