Fixing issue where names were not showing for permissions related items

--- a/public/pages/connector/devices/detail/device-target-permissions.html
+++ b/public/pages/connector/devices/detail/device-target-permissions.html
@@ -10,7 +10,7 @@
     </thead>
     <tr ng-repeat="permission in targetPermissions track by permission.source.uuid ">
         <td title="via {{permission.name}}">
-            {{permission.source.properties.name || permission.source.properties.displayName || permission.source.properties.email}}
+            {{getDisplayName(permission.source)}}
         </td>
         <td>
             <div class="btn-group">
