--- a/public/pages/connector/devices/detail/device-source-permissions.html
+++ b/public/pages/connector/devices/detail/device-source-permissions.html
@@ -10,7 +10,7 @@
     </thead>
     <tr ng-repeat="permission in sourcePermissions  track by permission.target.uuid ">
         <td title="via {{permission.name}}">
-            {{permission.target.properties.name || permission.target.properties.displayName || permission.target.properties.email}}
+            {{getDisplayName(permission.target)}}
         </td>
         <td>
             <div class="btn-group">
