Users must accept the terms of service before using the site

--- a/public/index.html
+++ b/public/index.html
@@ -121,6 +121,7 @@
 <script src="angular/controllers/device-wizard.js"></script>
 <script src="angular/controllers/device-edit.js"></script>
 <script src="angular/controllers/home.js"></script>
+<script src="angular/controllers/accept-terms.js"></script>
 <script src="angular/controllers/add-channel.js"></script>
 <script src="angular/controllers/add-channel-existing.js"></script>
 <script src="angular/controllers/add-channel-noauth.js"></script>
