Fixed issue where trying to add an unclaimed gateway was not showing up correctly, was defaulting to devices.

--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -47,3 +47,13 @@
 
     </div>
 </div>
+<hr>
+<h2 class="text-center">
+    <span class="fa-stack fa-lg">
+        <i class="fa fa-square-o fa-stack-2x"></i>
+        <i class="fa fa-share-alt fa-stack-1x"></i>
+    </span>
+    Shared Nodes
+</h2>
+<div class="row">
+</div>
