--- a/public/index.html
+++ b/public/index.html
@@ -83,30 +83,30 @@
 <script src="lib/elastic.js/dist/elastic.js"></script>
 <script src="lib/elasticsearch/elasticsearch.angular.js"></script>
 <script src="lib/smoothie/smoothie.js"></script>
+<script src="lib/ng-table/ng-table.js"></script>
 <!-- <script src="lib/jpreloader/js/jpreloader.js"></script> -->
 <!-- <script src="assets/javascripts/loop.js"></script> -->
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="angular/app.js"></script>
-<script src="angular/services/user.js"></script>
-<script src="angular/services/device.js"></script>
+<script src="angular/services/auth.js"></script>
 <script src="angular/services/channel.js"></script>
-<script src="angular/services/nodered.js"></script>
-<script src="angular/services/group.js"></script>
+<script src="angular/services/device.js"></script>
 <script src="angular/services/elastic.js"></script>
+<script src="angular/services/group.js"></script>
+<script src="angular/services/invitation.js"></script>
 <script src="angular/services/node-type.js"></script>
 <script src="angular/services/node.js"></script>
-<script src="angular/services/plugin.js"></script>
-<script src="angular/services/invitation.js"></script>
+<script src="angular/services/nodered.js"></script>
 <script src="angular/services/permissions.js"></script>
+<script src="angular/services/plugin.js"></script>
+<script src="angular/services/rubber.js"></script>
 <script src="angular/services/skynet.js"></script>
-<script src="angular/services/auth.js"></script>
+<script src="angular/services/user.js"></script>
 <script src="angular/directives/nvd3-line-chart.js"></script>
 <script src="angular/directives/nvd3-pie-chart.js"></script>
 <script src="angular/directives/nvd3-line-with-focus-chart.js"></script>
-<script src="angular/directives/nvd3-scatter-chart.js"></script>
-<script src="lib/ng-table/ng-table.js"></script>
 <script src="angular/directives/popover.js"></script>
 <script src="angular/directives/toggle.js"></script>
 <script src="angular/directives/message-grapher/message-grapher.js"></script>
