Mobile friendly login page

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -38,21 +38,38 @@
                   <a href='/forgot'>Forgot your password?</a> /
                   <a href='/signup'><strong>Sign up!</strong></a>
                 </div>
-                <br />
+                <br>
+                <br>
 
                 <div class="row text-center">
-                  <a class="btn btn-github" href="{{getLoginUrl('/auth/github')}}" target="_self">
-                    <span class="fa fa-github"> Github</span>
-                  </a>
-                  <a class="btn btn-facebook" href="{{getLoginUrl('/auth/facebook')}}" target="_self">
-                    <span class="fa fa-facebook"> Facebook</span>
-                  </a>
-                  <a class="btn btn-twitter" href="{{getLoginUrl('/auth/twitter')}}" target="_self">
-                    <span class="fa fa-twitter"> Twitter</span>
-                  </a>
-                  <a class="btn btn-google-plus" href="{{getLoginUrl('/auth/google')}}" target="_self">
-                    <span class="fa fa-google-plus"> Google+</span>
-                  </a>
+                  <div class="col-xs-12 col-lg-6">
+                    <p>
+                      <a class="btn-lg btn-block btn-github" href="{{getLoginUrl('/auth/github')}}" target="_self">
+                        <span class="fa fa-github"> Github</span>
+                      </a>
+                    </p><br>
+                  </div>
+                  <div class="col-xs-12 col-lg-6">
+                    <p>
+                      <a class="btn-lg btn-block btn-facebook" href="{{getLoginUrl('/auth/facebook')}}" target="_self">
+                        <span class="fa fa-facebook"> Facebook</span>
+                      </a>
+                    </p><br>
+                  </div>
+                  <div class="col-xs-12 col-lg-6">
+                    <p>
+                      <a class="btn-lg btn-block btn-twitter" href="{{getLoginUrl('/auth/twitter')}}" target="_self">
+                        <span class="fa fa-twitter"> Twitter</span>
+                      </a>
+                    </p><br>
+                  </div>
+                  <div class="col-xs-12 col-lg-6">
+                    <p>
+                      <a class="btn-lg btn-block btn-google-plus" href="{{getLoginUrl('/auth/google')}}" target="_self">
+                        <span class="fa fa-google-plus"> Google+</span>
+                      </a>
+                    </p><br>
+                  </div>
                 </div>
 
               </div>
