Adding messaging for device detail mage

--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@
 <script src="angular/controllers/channel.js"></script>
 <script src="angular/controllers/custom-channel.js"></script>
 <script src="angular/controllers/messaging.js"></script>
+<script src="angular/controllers/messaging-device.js"></script>
 <script src="angular/controllers/contact.js"></script>
 <script src="angular/controllers/design.js"></script>
 <script src="angular/controllers/docs.js"></script>
