Adding messaging tab to device detail page works for devices and gateways (including subdevice messaging).

--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -75,7 +75,7 @@
                     </ul>
                 </tab>
                 <tab heading="Messaging">
-                    <div ng-include="'/pages/connector/devices/detail/messaging.html'"></div>
+                    <div ng-controller="MessagingDeviceController" ng-include="'/pages/connector/devices/detail/messaging.html'"></div>
                 </tab>
             </tabset>
             <tabset ng-if="device.type !== 'gateway'">
