shared-device-detail page working! sorta.

--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,7 @@
 <script src="angular/controllers/subdevice.js"></script>
 <script src="angular/controllers/device-wizard.js"></script>
 <script src="angular/controllers/device-detail.js"></script>
+<script src="angular/controllers/device-detail-shared.js"></script>
 <script src="angular/controllers/home.js"></script>
 <script src="angular/controllers/accept-terms.js"></script>
 <script src="angular/controllers/add-channel.js"></script>
