--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -63,7 +63,7 @@
         <div ng-repeat="node in sharedNodes | filter: {name:nodeSearch} | orderBy: 'name'"
              class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
             <h4 class="text-center">
-                <a href ui-sref="^.shared-device-detail({uuid: {{node.resource.uuid}}})" class="">
+                <a href ui-sref="^.shared-device-detail({uuid: node.resource.uuid})" class="">
                     <div title="{{node.name}}" class="node-thumbnail animated-popout"
                          ng-style="{'background-image': 'url('+node.nodeType.logo+')'}" title="{{node.name}}"
                          ng-class="{faded: !node.online}"></div>
