Homepage panels are now links

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,5 +1,5 @@
 <style>
-.row-flex, .row-flex > div[class*='col-'] {  
+.row-flex, .row-flex > div[class*='col-'] {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -43,7 +43,7 @@
             <span>Welcome to Octoblu! </span>
         </h1>
     </div>
-    
+
     <h4>Connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
     <br />
 
@@ -52,52 +52,65 @@
 <div class="container col-lg-12">
   <div class="row row-flex row-flex-wrap">
     <div class="col-md-3">
-      <div class="well"> 
-        <i class="fa fa-code-fork fa-5x pull-left"></i>
-            <h2>CONNECT</h2>
-            <h3>Connect people, things, applications, and clouds</h3>
-            <ul>
-                <li>Direct Connect - WIRED</li>
-                <li>Direct Connect - WIRELESS</li>
-                <li>APIs</li>
-            </ul>
+      <div class="well">
+        <h2>
+          <a href ui-sref="ob.connector.nodes" class="text-normal-color">
+            <i class="fa fa-code-fork fa-2x"></i>&nbsp;
+            CONNECT
+          </a>
+        </h2>
+        <h3>Connect people, things, applications, and clouds</h3>
+        <ul>
+          <li>Direct Connect - WIRED</li>
+          <li>Direct Connect - WIRELESS</li>
+          <li>APIs</li>
+        </ul>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="well"> 
-        <i class="fa fa-edit fa-5x pull-left"></i>
-        <h2>DESIGN</h2>
+      <div class="well">
+        <h2>
+          <a href ui-sref="ob.design" class="text-normal-color">
+            <i class="fa fa-edit fa-2x"></i>&nbsp;
+            DESIGN
+          </a>
+        </h2>
         <h3>Design flows are a simple ‘drag and drop’ with automatic deployment to production</h3>
         <ul>
             <li>Creat powerful orchestrations</li>
             <li>Share flows with others</li>
-            <li></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="row row-flex row-flex-wrap">
     <div class="col-md-3">
-      <div class="well"> 
-        <i class="fa fa-tasks fa-5x pull-left"></i>
-            <h2>PROCESS</h2>
-            <h3>Securely process custom flows across multiple protocols and environments with advanced rights management model.</h3>
-            <ul>
-                <li>24/7 event monitoring and messaging</li>
-                <li>Millisecond response time</li>
-                <li></li>
-            </ul>
+      <div class="well">
+        <h2>
+          <a href ui-sref="ob.process" class="text-normal-color">
+            <i class="fa fa-tasks fa-2x"></i>&nbsp;
+            PROCESS
+          </a>
+        </h2>
+        <h3>Securely process custom flows across multiple protocols and environments with advanced rights management model.</h3>
+        <ul>
+            <li>24/7 event monitoring and messaging</li>
+            <li>Millisecond response time</li>
+        </ul>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="well"> 
-        <i class="fa fa-bar-chart-o fa-5x pull-left"></i>
-        <h2>ANALYZE</h2>
+      <div class="well">
+        <a href ui-sref="ob.analyze" class="text-normal-color">
+          <h2>
+            <i class="fa fa-bar-chart-o fa-2x"></i>&nbsp;
+            ANALYZE
+          </h2>
+        </a>
         <h3>Built-in analysis tools for rich and deep analytics:</h3>
         <ul>
-            <li>ElasticSearch</li>
-            <li>Splunk</li>
-            <li></li>
+          <li>ElasticSearch</li>
+          <li>Splunk</li>
         </ul>
       </div>
     </div>
