added design2 page/controller for the new designer.

--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,7 @@
 <script src="angular/controllers/reset.js"></script>
 <script src="angular/controllers/services.js"></script>
 <script src="angular/controllers/signup.js"></script>
+<script src="angular/controllers/design2.js"></script>
 <!-- endbuild -->
 
 <!-- Designer Dependencies -->
