--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -15,7 +15,7 @@
     <div class="col-md-3">
       <div class="well">
         <h2>
-          <a href ui-sref="ob.connector.nodes" class="text-normal-color">
+          <a href ui-sref="ob.connector.nodes.all" class="text-normal-color">
             <i class="fa fa-code-fork fa-2x"></i>&nbsp;
             CONNECT
           </a>
