Right align designer deploy buttons

--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -3,9 +3,9 @@
     <link rel="stylesheet" type="text/css" href="/assets/design/orion/built-editor.css"/>
     <!-- <link rel="stylesheet" href="/assets/design/style.css"/> -->
 
-    <div class="page-header">
+    <div class="page-header text-right">
         <div class="btn-group dropdown-container">
-            <a class="dropdown-toggle" data-toggle="dropdown" href>
+            <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href>
                 <i class="fa fa-align-justify"></i> <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
@@ -30,7 +30,7 @@
             </ul>
         </div>
         <div class="btn-group">
-            <a ng-click="save()" id="btn-deploy" class="btn-deploy disabled" href><i class="fa fa-upload"></i> Deploy</a>
+            <a ng-click="save()" id="btn-deploy" class="btn btn-primary btn-deploy disabled" href><i class="fa fa-upload"></i> Deploy</a>
         </div>
     </div>
 
